<?xml version="1.0" encoding="utf-8"?>
<ScrollView 

	android:layout_height="wrap_content" 
	android:layout_width="match_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:weightSum="1" 
	    android:paddingLeft="20dip"
		android:paddingRight="20dip" android:orientation="vertical">
	    <TextView 
	    	android:layout_width="match_parent" 
	    	android:layout_height="wrap_content" 
	    	android:textAppearance="?android:attr/textAppearanceLarge"
	    	android:gravity="center" android:text="@string/yreg_text">
	   	</TextView>
	   	
	    <TextView 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/ylogin_mail_text">
	   	</TextView>
	    
	    <EditText 
	    	android:layout_width="match_parent" 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/mail" 
	    	android:inputType="textEmailAddress">
	    </EditText>
	    
	    <TextView 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/ylogin_name_text">
	   	</TextView>
	    <EditText 
	     	android:layout_height="wrap_content" 
	     	android:id="@+id/name" 
	     	android:layout_width="match_parent" 
	     	android:inputType="textPersonName">
	   	</EditText>
	    
	
	    
	    <TextView 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:text="@string/ylogin_password_text">
	   	</TextView>
	    <EditText 
	    	android:layout_width="match_parent" 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/password" 
	    	android:inputType="textPassword">
		</EditText>
		<TextView 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:text="@string/ylogin_password2_text">
	   	</TextView>
	    <EditText 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/password2" 
	    	android:layout_width="match_parent" 
	    	android:inputType="textPassword">
	  	</EditText>
	
	    <Button 
	    	android:id="@+id/reg_button" 
	    	android:layout_height="wrap_content" 
	    	android:layout_width="match_parent" 
	    	android:text="@string/ylogin_reg_text">
	    </Button>
	</LinearLayout>
</ScrollView>
