<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content" 
	android:layout_width="match_parent">
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:weightSum="1" 
	    android:orientation="vertical"
	    android:paddingLeft="20dip"
		android:paddingRight="20dip" android:scrollbars="vertical|horizontal">
	    <TextView 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:textAppearance="?android:attr/textAppearanceLarge"
	    	android:gravity="center" android:text="@string/ylogin_text">
	   	</TextView>
	   	
	    <TextView 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/ylogin_mail_text">
	   	</TextView>
	    
	    <EditText 
	    	android:layout_width="match_parent" 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/mail" 
	    	android:inputType="textEmailAddress">
	        <requestFocus></requestFocus>
	    </EditText>
	    
	    <TextView 
	    	android:layout_width="wrap_content" 
	    	android:layout_height="wrap_content" 
	    	android:text="@string/ylogin_password_text">
	    	</TextView>
	    <EditText 
	    	android:layout_width="match_parent" 
	    	android:layout_height="wrap_content" 
	    	android:id="@+id/password" 
	    	android:inputType="textPassword">
		</EditText>
	    <Button 
	    	android:id="@+id/login_button" 
	    	android:layout_width="match_parent" 
	    	android:layout_height="wrap_content" 
	    	android:text="@string/ylogin_enter_text">
	   	</Button>
	    <Button 
	    	android:id="@+id/reg_button" 
	    	android:layout_height="wrap_content" 
	    	android:layout_width="match_parent" 
	    	android:text="@string/ylogin_reg_text"
	    	android:layout_marginTop="20dip">
	    </Button>
	    
	    
	</LinearLayout>
</ScrollView>
