<?xml version="1.0" encoding="utf-8"?>
   		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:weightSum="1" 
		    android:orientation="vertical"
		    android:paddingLeft="20dip"
			android:paddingRight="20dip">
		    <TextView 
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content" 
		    	android:textAppearance="?android:attr/textAppearanceLarge"
		    	android:text="@string/login_text"
		    	android:gravity="center">
		   	</TextView>
		    
		    
		    <Button 
		    	android:id="@+id/user_google_button"
		    	android:layout_height="wrap_content"
		    	android:text="@string/use_google_button" 
		    	android:layout_width="match_parent">
		   	</Button>
		    
		    <Button 
		    	android:id="@+id/use_yquest_button"
		    	android:layout_height="wrap_content"
		    	android:text="@string/use_yquest_button"
		    	android:layout_width="match_parent" >
		   	</Button>
		</LinearLayout>



